fix jdk version circle CI